m3w1 refactor ArchonTrackerManager, now adding shared array